[project]
name = "monte-carlo-hazard-estimation-code"
version = "0.1.0"
description = "Code for Monte Carlo Hazard Estimation Paper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "cyclopts>=4.5.0",
  "nshmdb>=2025.12.1",
  "numba>=0.63",
  "numpy>=2.3.5",
  "oq-wrapper>=2025.12.4",
  "pandas[parquet]>=3.0.0",
  "scipy>=1.17.0",
  "source-modelling>=2025.12.1",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = ["numpydoc>=1.10.0", "ruff>=0.14.13", "ty>=0.0.13"]
test = ["pytest>=9.0.2"]
types = ["pandas-stubs>=2.3.3.260113", "scipy-stubs>=1.17.0.1"]
