[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monte-carlo-hazard-estimation-code"
version = "0.1.0"
description = "Code for Monte Carlo Hazard Estimation Paper"
authors = [{ name = "Jake Faulkner" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "altair<5",
  "cyclopts>=4.5.0",
  "deptry>=0.24.0",
  "folium>=0.20.0",
  "geocube>=0.7.1",
  "mapclassify>=2.10.0",
  "matplotlib>=3.10.8",
  "nshmdb>=2025.12.1",
  "numpy>=2.3.5",
  "oq-wrapper>=2025.12.4",
  "pandas[parquet]>=3.0.0",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.0",
  "seaborn>=0.13.2",
  "source-modelling>=2025.12.1",
  "standard-imghdr>=3.13.0",
  "streamlit>=1.19.0",
  "streamlit-folium>=0.26.1",
  "tqdm>=4.67.1",
]

[tool.setuptools.packages]
find = { where = ['.'], exclude = ['tests', 'data'] }

[project.optional-dependencies]
dev = ["numpydoc>=1.10.0", "ruff>=0.14.13", "ty>=0.0.13", "ipython>=9.9.0"]
test = ["pytest>=9.0.2"]
types = ["pandas-stubs>=2.3.3.260113", "scipy-stubs>=1.17.0.1"]

[tool.pytest]
markers = ["slow: mark test as slow."]


[tool.numpydoc_validation]
checks = [
  "GL05",
  "GL08",
  "GL10",
  "PR01",
  "PR02",
  "PR03",
  "PR04",
  "PR05",
  "PR06",
  "PR07",
  "RT01",
  "RT02",
  "RT03",
  "RT04",
  "YD01",
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$',
]

[tool.hatch.build.targets.wheel]
packages = ["hazard_estimation"]
